tests/rule_import/input/import_all.rules
// RUN: %not %neal-fixture | %check
import * from "./base.rules"

// CHECK: warning: No random numbers
// CHECK: error: No force unwrap
